# cja

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
.github/workflows/: linux.yml  macos.yml  release.yml  windows.yml
examples/: .gitignore
examples/boost/: CMakeLists.txt
examples/box2d/: CMakeLists.txt  main.cpp
examples/catch2/: CMakeLists.txt
examples/cereal/: CMakeLists.txt  main.cpp
examples/clang-tidy/: .clang-tidy  CMakeLists.txt  foo.cpp  main.cpp
examples/cpm/: CMakeLists.txt
examples/entt/: CMakeLists.txt  main.cpp
examples/frameworks/: CMakeLists.txt  main.mm
examples/freetype/: CMakeLists.txt  mylib.cpp
examples/gtest/: CMakeLists.txt  sample_test.cpp
examples/hello/: CMakeLists.txt
examples/hello/subfolder/: main.c
examples/json/: CMakeLists.txt  main.cpp
examples/libmath/: CMakeLists.txt  main.cpp  math.cpp  math.hpp
examples/manifest/: CMakeLists.txt  app.manifest  main.c
examples/objlib/: CMakeLists.txt  main.cpp  utils.cpp  utils.hpp
examples/qt5/: CMakeLists.txt  main.cpp
examples/spdlog/: CMakeLists.txt  main.cpp
examples/subdirectory/: CMakeLists.txt
examples/subdirectory/cmake/: foo.cmake
examples/yaml-cpp/: CMakeLists.txt  main.cpp
src/cja/: __init__.py  __main__.py  build_context.py  cli.py  commands.py  config_utils.py  configurator.py  find_commands.py  find_package.py  frame.py  generator.py  ninja_syntax.py  parser.py  syntax.py  targets.py  utils.py
src/cja/cmake/Modules/: FindGTest.cmake
src/cninja/: TODO.md  __init__.py  __main__.py  build_context.py  cli.py  commands.py  generator.py  parser.py  syntax.py  targets.py  utils.py
tests/: helpers.py  test_add_dependencies.py  test_add_subdirectory.py  test_add_test.py  test_asm.py  test_bison_target.py  test_block.py  test_build_type.py  test_check_compiler_flag.py  test_check_function_exists.py  test_check_include_files.py  test_check_ipo.py  test_check_library_exists.py  test_check_source_compiles.py  test_check_state.py  test_check_symbol_exists.py  test_check_symbol_exists_c.py  test_check_type_size.py  test_clang_tidy.py  test_cli.py  test_cmake_current_list_dir.py  test_cmake_current_list_file.py  test_cmake_current_list_line.py  test_cmake_dependent_option.py  test_cmake_minimum_required.py  test_cmake_policy.py  test_cmake_project_include.py  test_cmake_system_name.py  test_comments.py  test_compdb.py  test_compile_definitions.py  test_compile_features.py  test_compile_options.py  test_compiler_vars.py  test_configure_file.py  test_configure_package_config_file.py  test_custom_command.py  test_custom_target.py  test_execute_process.py  test_fetchcontent.py  (+63 more)
