[project]
name = "cja"
version = "0.3.0"
description = "CMake-compatible build system that generates Ninja build files"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Jan Niklas Hasse", email = "jhasse@bixense.com" }
]
requires-python = ">=3.10"
dependencies = [
    "rich>=14.3.3",
    "termcolor>=3.3.0",
]

[project.urls]
Repository = "https://github.com/jhasse/cja"

[project.scripts]
cja = "cja.cli:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["build", "build-*", "_deps", ".venv", ".git"]
